traefik.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-public
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      restartPolicy: Always
      containers:
        - name: traefik
          image: traefik:1.7
