result.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: default
  labels:
    app: result
spec:
  selector:
    app: result
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
