traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-public
  name: traefik-service
  labels:
    app: traefik
spec:
  selector:
    app: traefik
  ports:
    - name: http
      protocol: TCP
      port: 30021
      targetPort: 30042
    - name: admin
      protocol: TCP
      port: 80
      targetPort: 8080
