poll.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: poll-ingress
  labels:
    app: poll
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: poll.dop.io
      http:
        paths:
          - path: /
            backend:
              serviceName: poll
              servicePort: 80
